buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE")
    }
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

bootJar {
    baseName = 'laurel-book-database'
    version =  '0.1.0'
}

repositories {
    mavenCentral()
}

sourceCompatibility = 1.12
targetCompatibility = 1.12

dependencies {
    compile 'org.springframework.boot:spring-boot-starter:2.1.6.RELEASE'
    compile 'org.springframework:spring-jdbc:5.1.8.RELEASE'
    compile 'org.xerial:sqlite-jdbc:3.28.0'
    compile 'org.apache.commons:commons-dbcp2:2.6.0'
    compile 'com.fasterxml.jackson.core:jackson-core:2.10.0.pr1'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.9.2'
    compile 'com.fasterxml.jackson.core:jackson-annotations:2.10.0.pr1'

    testCompile group: 'junit', name: 'junit', version: '4.12'
}
